--- a/files/signIn.html
+++ b/files/signIn.html
@@ -14,7 +14,7 @@
 
         body
          {
-        background-image: url('../picture/background.jpg');
+        background-image: url('../picture/edu1.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size:cover;
@@ -181,14 +181,14 @@
     <div class="form-container-t2">
         <form action="../php/login.php" method="POST" name="f1" >
         <div>
-            <input type="email" name="email" id="email" placeholder="Enter Email">
+            <input type="email" name="email" id="email" placeholder="Enter Email" required>
         </div>
 
         <div>
-            <input type="password" name="pwd" id="pwd" placeholder="Enter Password">
+            <input type="password" name="pwd" id="pwd" placeholder="Enter Password" required>
         </div>
 <div class="check" >
-        <input type="checkbox" >
+        <input type="checkbox" required>
         <p id="p1">Accept the <a href="#"> <b>Terms and Conditions</b> </a></p>
         </div>
         <div class="check" style="margin:auto;width: 100px;">
